--- a/CV.html
+++ b/CV.html
@@ -62,7 +62,12 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-
+<section id="education" class="level1">
+<h1>Education</h1>
+<p>PhD - Marine Ecology: University of Auckland; Auckland, New Zealand (2010)</p>
+<p>MS - Zoology: Massey University; Palmerston North, New Zealand (2004)</p>
+<p>BS - Biology: Kansas State University; Manhattan, Kansas (1997)</p>
+</section>
 
 </main>
 <!-- /main column -->
