--- a/CV.html
+++ b/CV.html
@@ -20,27 +20,7 @@ ul.task-list li input[type="checkbox"] {
   margin: 0 0.8em 0.2em -1em; /* quarto-specific, see https://github.com/quarto-dev/quarto-cli/issues/4556 */ 
   vertical-align: middle;
 }
-/* CSS for citations */
-div.csl-bib-body { }
-div.csl-entry {
-  clear: both;
-  margin-bottom: 0em;
-}
-.hanging-indent div.csl-entry {
-  margin-left:2em;
-  text-indent:-2em;
-}
-div.csl-left-margin {
-  min-width:2em;
-  float:left;
-}
-div.csl-right-inline {
-  margin-left:2em;
-  padding-left:1em;
-}
-div.csl-indent {
-  margin-left: 2em;
-}</style>
+</style>
 
 
 <script src="CV_files/libs/clipboard/clipboard.min.js"></script>
@@ -87,18 +67,12 @@ div.csl-indent {
 <p>PhD - Marine Ecology: University of Auckland; Auckland, New Zealand(2010)</p>
 <p>MS - Zoology: Massey University; Palmerston North, New Zealand (2004)</p>
 <p>BS - Biology: Kansas State University; Manhattan, Kansas (1997)</p>
-<p><span class="citation" data-cites="carvalho-2016">(<a href="#ref-carvalho-2016" role="doc-biblioref">Carvalho and Sippel 2016</a>)</span></p>
 </section>
-<section id="publications" class="level1 unnumbered">
-
-
+<section id="publications" class="level1">
+<h1>Publications</h1>
 </section>
 
-<div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">Publications</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
-<div id="ref-carvalho-2016" class="csl-entry" role="listitem">
-Carvalho, Felipe, and Tim Sippel. 2016. <span>“<span class="nocase">Direct Estimates of gear selectivity for the North Pacific Blue Shark using catch-at-length data: Implications for stock assessment</span>.”</span> ISC/16/SHARKWG-1/13. International Scientific Committee for Tuna; Tuna-like Species.
-</div>
-</div></section></div></main>
+</main>
 <!-- /main column -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
