--- a/CV.html
+++ b/CV.html
@@ -68,8 +68,9 @@ ul.task-list li input[type="checkbox"] {
 <p>MS - Zoology: Massey University; Palmerston North, New Zealand (2004)</p>
 <p>BS - Biology: Kansas State University; Manhattan, Kansas (1997)</p>
 </section>
-<section id="publications" class="level1">
-<h1>Publications</h1>
+<section id="employment" class="level1">
+<h1>Employment</h1>
+<p>Worley Consulting - Senior Marine Environmental Scientist</p>
 </section>
 
 </main>
